--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@line/bot-sdk": "^9.4.0",
+    "cheerio": "^1.0.0",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18"
